how to get words more than twice, i.e. split()

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+*.pdf
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,java,vscode,intellij,pycharm,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,vscode,intellij,pycharm,python
